--- a/app/src/main/res/layout/state_layout_noconnection.xml
+++ b/app/src/main/res/layout/state_layout_noconnection.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/NoDataFound" />
+        android:text="@string/NoInternetConnection" />
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/retryBtn"
