--- a/app/src/main/res/layout/contact_dialog_layout.xml
+++ b/app/src/main/res/layout/contact_dialog_layout.xml
@@ -25,8 +25,7 @@
                 android:hint="@string/Phonenumber"
                 app:errorEnabled="false"
                 app:errorTextAppearance="@style/ErrorText"
-                app:hintTextAppearance="@style/HintText"
-                app:layout_constraintBottom_toTopOf="@+id/userNameLayout">
+                app:hintTextAppearance="@style/HintText">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/phone1"
@@ -50,7 +49,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/phone1Layout">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/email"
+                    android:id="@+id/phone2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableEnd="@drawable/ic_phone_black_24dp"
