--- a/app/src/main/res/layout/post_details_layout.xml
+++ b/app/src/main/res/layout/post_details_layout.xml
@@ -270,6 +270,7 @@
 
 
                                 <android.support.v7.widget.AppCompatTextView
+                                    android:id="@+id/contactTextBtn"
                                     style="@style/AppTheme.TextAppearance"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
