--- a/app/src/main/res/layout/toolbar__business_search_layout.xml
+++ b/app/src/main/res/layout/toolbar__business_search_layout.xml
@@ -21,10 +21,9 @@
             android:layout_centerInParent="true"
             android:shadowColor="@color/grayLightTextColor"
             android:shadowRadius="@integer/textShadow"
-            android:text="@string/FindNearBy"
+            android:text="@string/BusinessGuide"
             android:textColor="@color/black"
             android:textStyle="bold" />
-
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/refreshBtn"
