--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -279,6 +279,20 @@
                             android:textStyle="bold"
                             app:layout_constraintTop_toBottomOf="@+id/myCategoriesStateLayout" />
 
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/AdsAddLink"
+                            style="@style/AppTheme.TextAppearance"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            android:padding="@dimen/md_margin"
+                            android:text="@string/Add"
+                            android:textColor="@color/profileHeaderColor"
+                            android:textStyle="bold"
+                            app:layout_constraintTop_toBottomOf="@+id/myCategoriesStateLayout" />
+
+
                         <View
                             android:id="@+id/AdsSperator"
                             android:layout_width="0dp"
