--- a/app/src/main/res/layout/product_manage_layout.xml
+++ b/app/src/main/res/layout/product_manage_layout.xml
@@ -1,161 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparent">
 
-    <ImageView
-        android:id="@+id/productCloseBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:padding="@dimen/md_margin"
-        android:src="@drawable/ic_close_white_24dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        android:layout_height="match_parent"
+        android:background="@color/transparent">
 
+        <ImageView
+            android:id="@+id/productCloseBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:padding="@dimen/md_margin"
+            android:src="@drawable/ic_close_white_24dp" />
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sm_margin"
-        android:background="@color/white"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="@dimen/cardRadius"
-        app:cardElevation="@dimen/lg_elevation"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline">
-
-        <android.support.constraint.ConstraintLayout
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/max_margin"
-            android:layout_marginTop="@dimen/lg_padding"
-            android:padding="@dimen/md_padding">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
 
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/productImage"
-                android:layout_width="@dimen/product_image_width"
-                android:layout_height="@dimen/product_image_height"
-                android:src="@mipmap/ic_image_placeholder"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/productImageDescription"
-                style="@style/AppTheme.TextAppearance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/UploadImageForServiceOrProduct"
-                android:textColor="@color/grayDarkTextColor"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/productImage" />
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/sm_margin"
+            android:background="@color/white"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/cardRadius"
+            app:cardElevation="@dimen/lg_elevation"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintBottom_toTopOf="@+id/guideline"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/productTitleLayout"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/ProductName"
-                app:errorEnabled="true"
-                app:errorTextAppearance="@style/ErrorText"
-                app:hintTextAppearance="@style/HintText"
-                app:layout_constraintBottom_toTopOf="@+id/guideLineEmail"
-                app:layout_constraintTop_toBottomOf="@+id/productImageDescription">
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/max_margin"
+                android:layout_marginTop="@dimen/lg_padding"
+                android:padding="@dimen/md_padding">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/productTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:textStyle="bold" />
-            </android.support.design.widget.TextInputLayout>
-
-            <LinearLayout
-                android:id="@+id/productDescriptionLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@+id/productTitleLayout">
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/productImage"
+                    android:layout_width="@dimen/product_image_width"
+                    android:layout_height="@dimen/product_image_height"
+                    android:src="@mipmap/ic_image_placeholder"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/productImageDescription"
+                    style="@style/AppTheme.TextAppearance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/UploadImageForServiceOrProduct"
+                    android:textColor="@color/grayDarkTextColor"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/productImage" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/productTitleLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/Description"
-                    android:textColor="@color/grayDarkTextColor" />
+                    android:hint="@string/ProductName"
+                    app:errorEnabled="true"
+                    app:errorTextAppearance="@style/ErrorText"
+                    app:hintTextAppearance="@style/HintText"
+                    app:layout_constraintBottom_toTopOf="@+id/guideLineEmail"
+                    app:layout_constraintTop_toBottomOf="@+id/productImageDescription">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/productDescription"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="top|left|start"
-                    android:hint="@string/Optional"
-                    android:inputType="textMultiLine"
-                    android:lines="3"
-                    android:minLines="3" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/productApplyBtnContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="6"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/productDescriptionLayout">
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-
-                <com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    app:ms9_shadowElevation="@dimen/md_elevation">
-
-                    <LinearLayout
-                        style="@style/commonNinePatchShadowItemViewStyle"
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/productTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/md_margin"
-                        android:background="@drawable/white_radius_bg"
-                        android:padding="@dimen/zero">
+                        android:inputType="text"
+                        android:textStyle="bold" />
+                </android.support.design.widget.TextInputLayout>
 
-                        <android.support.v7.widget.AppCompatButton
-                            android:id="@+id/productApplyBtn"
-                            style="@style/AppTheme.NormalButtonStyle"
+                <LinearLayout
+                    android:id="@+id/productDescriptionLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toBottomOf="@+id/productTitleLayout">
+
+                    <android.support.v7.widget.AppCompatTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/Description"
+                        android:textColor="@color/grayDarkTextColor" />
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/productDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="top|left|start"
+                        android:hint="@string/Optional"
+                        android:inputType="textMultiLine"
+                        android:lines="3"
+                        android:minLines="3" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/productApplyBtnContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="6"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/productDescriptionLayout">
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
+
+                    <com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        app:ms9_shadowElevation="@dimen/md_elevation">
+
+                        <LinearLayout
+                            style="@style/commonNinePatchShadowItemViewStyle"
                             android:layout_width="match_parent"
-                            android:layout_height="@dimen/sm_btn_height"
-                            android:layout_margin="@dimen/zero"
-                            android:background="@drawable/button_bg"
-                            android:padding="@dimen/xsm_padding"
-                            android:shadowColor="@color/black"
-                            android:text="@string/Apply"
-                            android:textColor="@color/white"
-                            app:elevation="@dimen/elevation" />
-                    </LinearLayout>
-                </com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView>
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/md_margin"
+                            android:background="@drawable/white_radius_bg"
+                            android:padding="@dimen/zero">
 
-            </LinearLayout>
+                            <android.support.v7.widget.AppCompatButton
+                                android:id="@+id/productApplyBtn"
+                                style="@style/AppTheme.NormalButtonStyle"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/sm_btn_height"
+                                android:layout_margin="@dimen/zero"
+                                android:background="@drawable/button_bg"
+                                android:padding="@dimen/xsm_padding"
+                                android:shadowColor="@color/black"
+                                android:text="@string/Apply"
+                                android:textColor="@color/white"
+                                app:elevation="@dimen/elevation" />
+                        </LinearLayout>
+                    </com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView>
 
-        </android.support.constraint.ConstraintLayout>
+                </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+            </android.support.constraint.ConstraintLayout>
 
-</android.support.constraint.ConstraintLayout>
+        </android.support.v7.widget.CardView>
+
+    </android.support.constraint.ConstraintLayout>
+</RelativeLayout>
